--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "npx eslint src --ext .ts,.tsx"
   },
   "dependencies": {
-    "react-router-dom": "^6.3.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
